# ats-resume-matcher

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ats_resume_matcher/: __init__.py  main.py  matcher.py
tests/: test_matcher.py
